# data-journals-dashboard

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  hugo.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: add_journal.yaml
.github/workflows/: data-pipeline.yml  deploy.yml
archetypes/: default.md
config/_default/: config.toml
content/: about.md
data/: 01_data_journals.csv  data_journals.yaml
data/dumps/: data_journals.csv  data_journals.json  data_journals_characteristics.csv
data/processed/: README.md  data_journals.yaml  data_journals_augmented.csv
data/raw/: data_journals.csv
examples/: test_journal.yaml
journal_metadata_schema/: core_schema.yaml  schema.yaml
metadata_schema/: schema.yaml
notebooks/: README.md  local_deployment.ipynb
src/: README.md  cli.py  config.py  data_processing.py  hugo_transform.py  parse_issue.py  utils.py  validate.py
templates/: journal_template.yaml
themes/djd/: theme.toml
themes/djd/layouts/: index.html
themes/djd/layouts/_default/: baseof.html  list.html  single.html
themes/djd/layouts/page/: single.html
themes/djd/layouts/partials/: sidebar.html
themes/djd/layouts/taxonomy/: data_journal_type.html  data_journal_type.terms.html  fields.html  fields.terms.html  keywords.html  keywords.terms.html  license_types.html  license_types.terms.html  licenses.terms.html  preservation.terms.html  publisher.html  publisher.terms.html  publishers.html  publishers.terms.html  research_fields.html  research_fields.terms.html  types.html  types.terms.html
themes/djd/static/css/: style.css
