[project]
name = "data-journals-dashboard"
version = "0.1.0"
description = "Browser dashboard built with Hugo to access and search a database of (Open Access) Data Journals"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.3",
    "pyyaml>=6.0",
    "requests>=2.33.1",
    "hugo>=0.161.1",
]

[project.scripts]
dj = "cli:cli"

[tool.uv]
package = true
