[project]
name = "data-journals-dashboard"
version = "0.1.0"
description = "Browser dashboard built with Hugo to access and search a database of (Open Access) Data Journals"
license = { text = "MIT" }
authors = [ { name = "Thomas Schmidt" } ]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "pyyaml>=6.0",
    "requests>=2.34.2",
    "hugo>=0.162.0.1",
]

[project.scripts]
dj = "cli:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
